fixing file input spacing

--- a/src/ModalCompany.scss
+++ b/src/ModalCompany.scss
@@ -60,6 +60,10 @@ form {
     padding-left: 12px;
   }
 
+  input {
+    float: left;
+  }
+
   .button-wrap {
     padding-top: 36px;
     text-align: right;
